[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xspline3d"
version = "0.1.0"
description = "MPI-based spline interpolation in distributed 3D volumes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Wenyang Zhao", email = "wenyang.zhao@riken.jp" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numba>=0.61",
  "numpy>=2.2",
  "scipy>=1.15",
  "threadpoolctl>=3",
  "mpi4py",
]

[project.urls]
Homepage = "https://github.com/TamaLab/xspline3d"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
